Project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: project
        image: matiashonkasalo/project:1.11
        volumeMounts: 
          - name: image-cache
            mountPath: /shared

      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: project-pvc
