Project/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
  - name: http 
    port: 1234
    targetPort: 8000
    nodePort: 30080
